tests/fsharp/conformance/wellformedness/E_Clashing_Values_in_AbstractClass03.bsl

E_Clashing_Values_in_AbstractClass03.fsx(16,18,16,25): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: int

Candidates:
 - abstract D.M: 'T -> int
 - abstract D.M: 'U -> string

E_Clashing_Values_in_AbstractClass03.fsx(17,18,17,25): typecheck error FS0041: A unique overload for method 'M' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known type of argument: int

Candidates:
 - abstract D.M: 'T -> int
 - abstract D.M: 'U -> string
